# PathWeave

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md  install.ps1
docs/: architecture.md  completion-behavior.md
examples/: Microsoft.PowerShell_profile.ps1
packaging/scoop/: pathweave.json
powershell/: PathWeave.psd1  PathWeave.psm1  package-release.ps1
powershell/tests/: PathWeave.Tests.ps1  run-tests.ps1
src/: cli.rs  config.rs  main.rs  matcher.rs  output.rs  scorer.rs  search.rs
tests/: matcher_tests.rs  scorer_tests.rs  search_tests.rs
